[gd_scene load_steps=2 format=3 uid="uid://dniel36nfeuqn"]

[ext_resource type="Script" path="res://UI.gd" id="1_533xt"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_533xt")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "(AreaName)"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Score: "

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -481.0
offset_bottom = 130.0
grow_horizontal = 0
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label2" type="Label" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "XX"

[node name="Label3" type="Label" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = ":"

[node name="Label4" type="Label" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "XX"

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
